[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/gfx/background.png" type="Texture" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/menu.svg" type="Texture" id=3]
[ext_resource path="res://assets/fonts/otella.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/icons/home.svg" type="Texture" id=5]
[ext_resource path="res://scenes/NavItem.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/icons/book.svg" type="Texture" id=7]
[ext_resource path="res://assets/icons/briefcase.svg" type="Texture" id=8]
[ext_resource path="res://assets/icons/settings.svg" type="Texture" id=9]
[ext_resource path="res://themes/Main.tres" type="Theme" id=10]
[ext_resource path="res://assets/icons/x.svg" type="Texture" id=11]
[ext_resource path="res://assets/img/Konfirmant/Konfirmant_03.JPG" type="Texture" id=12]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0784314, 0.470588, 0.454902, 1 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Sidebar:rect_min_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 150, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Sidebar_animation"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Sidebar:rect_min_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 70, 0 ), Vector2( 200, 0 ) ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="Sidebar" type="Panel" parent="HBoxContainer"]
margin_right = 150.0
margin_bottom = 1000.0
rect_min_size = Vector2( 150, 0 )
custom_styles/panel = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Sidebar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="TopContainer" type="VBoxContainer" parent="HBoxContainer/Sidebar/VBoxContainer"]
margin_right = 150.0
margin_bottom = 950.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="ToggleButton" type="Control" parent="HBoxContainer/Sidebar/VBoxContainer/TopContainer"]
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 70, 50 )

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Sidebar/VBoxContainer/TopContainer/ToggleButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.694118, 0.803922, 0.741176, 1 )

[node name="Sprite" type="Sprite" parent="HBoxContainer/Sidebar/VBoxContainer/TopContainer/ToggleButton"]
position = Vector2( 23, 15 )
texture = ExtResource( 3 )
centered = false

[node name="Home" parent="HBoxContainer/Sidebar/VBoxContainer/TopContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 150.0
margin_bottom = 100.0
icon = ExtResource( 5 )
label = "Home"
active = true

[node name="Konfirmant" parent="HBoxContainer/Sidebar/VBoxContainer/TopContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 150.0
margin_bottom = 150.0
icon = ExtResource( 8 )
label = "Konfirmant"

[node name="Gast" parent="HBoxContainer/Sidebar/VBoxContainer/TopContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 150.0
margin_right = 150.0
margin_bottom = 200.0
icon = ExtResource( 7 )
label = "GÃ¤ste"

[node name="Location" parent="HBoxContainer/Sidebar/VBoxContainer/TopContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 200.0
margin_right = 150.0
margin_bottom = 250.0
icon = ExtResource( 11 )
label = "Location"

[node name="BottomContainer" type="VBoxContainer" parent="HBoxContainer/Sidebar/VBoxContainer"]
margin_top = 950.0
margin_right = 150.0
margin_bottom = 1000.0

[node name="Settings" parent="HBoxContainer/Sidebar/VBoxContainer/BottomContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 50.0
icon = ExtResource( 9 )
label = "Settings"

[node name="Body" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 150.0
margin_right = 1600.0
margin_bottom = 1000.0
size_flags_horizontal = 3

[node name="TopBar" type="HBoxContainer" parent="HBoxContainer/Body"]
margin_right = 1450.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 50 )

[node name="Titlebar" type="HBoxContainer" parent="HBoxContainer/Body/TopBar"]
margin_right = 1450.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Header" type="Label" parent="HBoxContainer/Body/TopBar/Titlebar"]
margin_right = 1450.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.0784314, 0.470588, 0.454902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Meine Konfirmation"
align = 1
valign = 1

[node name="Content" type="Control" parent="HBoxContainer/Body"]
margin_top = 104.0
margin_right = 1450.0
margin_bottom = 1000.0
size_flags_vertical = 3

[node name="SignIn" type="VBoxContainer" parent="HBoxContainer/Body/Content"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 34

[node name="LblHeader" type="Label" parent="HBoxContainer/Body/Content/SignIn"]
margin_left = 551.0
margin_top = 119.0
margin_right = 898.0
margin_bottom = 146.0
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Bitte melde dich mit deinen Daten an"

[node name="LblBenutzername" type="Label" parent="HBoxContainer/Body/Content/SignIn"]
margin_left = 655.0
margin_top = 299.0
margin_right = 794.0
margin_bottom = 326.0
size_flags_horizontal = 4
text = "Benutzername"

[node name="Benutzername" type="LineEdit" parent="HBoxContainer/Body/Content/SignIn"]
margin_left = 625.0
margin_top = 360.0
margin_right = 825.0
margin_bottom = 397.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LblPasswort" type="Label" parent="HBoxContainer/Body/Content/SignIn"]
margin_left = 679.0
margin_top = 431.0
margin_right = 770.0
margin_bottom = 458.0
size_flags_horizontal = 4
text = "Passwort"

[node name="Passwort" type="LineEdit" parent="HBoxContainer/Body/Content/SignIn"]
margin_left = 625.0
margin_top = 492.0
margin_right = 825.0
margin_bottom = 529.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
secret = true

[node name="OKButton" type="Button" parent="HBoxContainer/Body/Content/SignIn"]
margin_left = 704.0
margin_top = 563.0
margin_right = 745.0
margin_bottom = 596.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "OK"

[node name="Feedback" type="Label" parent="HBoxContainer/Body/Content/SignIn"]
margin_left = 645.0
margin_top = 630.0
margin_right = 805.0
margin_bottom = 657.0
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Status des LogIn"

[node name="Home" type="HBoxContainer" parent="HBoxContainer/Body/Content"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Image" type="TextureRect" parent="HBoxContainer/Body/Content/Home"]
margin_right = 723.0
margin_bottom = 914.0
size_flags_horizontal = 3
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="Text" type="Label" parent="HBoxContainer/Body/Content/Home"]
margin_left = 727.0
margin_top = 138.0
margin_right = 1450.0
margin_bottom = 775.0
size_flags_horizontal = 3
text = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   

Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet,"
autowrap = true

[node name="ImageViewer" type="HBoxContainer" parent="HBoxContainer/Body/Content"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ButtonLeft" type="Button" parent="HBoxContainer/Body/Content/ImageViewer"]
margin_top = 432.0
margin_right = 100.0
margin_bottom = 482.0
rect_min_size = Vector2( 100, 50 )
size_flags_vertical = 4
text = "LEFT"

[node name="Image" type="TextureRect" parent="HBoxContainer/Body/Content/ImageViewer"]
margin_left = 104.0
margin_right = 1346.0
margin_bottom = 914.0
size_flags_horizontal = 3
expand = true
stretch_mode = 6

[node name="ButtonRight" type="Button" parent="HBoxContainer/Body/Content/ImageViewer"]
margin_left = 1350.0
margin_top = 432.0
margin_right = 1450.0
margin_bottom = 482.0
rect_min_size = Vector2( 100, 50 )
size_flags_vertical = 4
text = "RIGHT"

[node name="Settings" type="VBoxContainer" parent="HBoxContainer/Body/Content"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 40

[node name="UIScale" type="Label" parent="HBoxContainer/Body/Content/Settings"]
margin_left = 662.0
margin_top = 367.0
margin_right = 787.0
margin_bottom = 394.0
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Skalierung UI"

[node name="AutoSwitch" type="Label" parent="HBoxContainer/Body/Content/Settings"]
margin_left = 604.0
margin_top = 434.0
margin_right = 846.0
margin_bottom = 461.0
size_flags_horizontal = 4
text = "Bilder automatisch weiter"

[node name="WinSize" type="Label" parent="HBoxContainer/Body/Content/Settings"]
margin_top = 501.0
margin_right = 1450.0
margin_bottom = 528.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 2
text = "BildschirmgrÃ¶Ãe (1000, 1000)"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/Sidebar_animation = SubResource( 3 )

[connection signal="resized" from="." to="." method="_on_Main_resized"]
[connection signal="gui_input" from="HBoxContainer/Sidebar/VBoxContainer/TopContainer/ToggleButton" to="." method="_on_ToggleButton_gui_input"]
[connection signal="item_activated" from="HBoxContainer/Sidebar/VBoxContainer/TopContainer/Home" to="." method="_on_Home_item_activated"]
[connection signal="item_activated" from="HBoxContainer/Sidebar/VBoxContainer/TopContainer/Konfirmant" to="." method="_on_Konfirmant_item_activated"]
[connection signal="item_activated" from="HBoxContainer/Sidebar/VBoxContainer/TopContainer/Gast" to="." method="_on_Gast_item_activated"]
[connection signal="item_activated" from="HBoxContainer/Sidebar/VBoxContainer/TopContainer/Location" to="." method="_on_Location_item_activated"]
[connection signal="item_activated" from="HBoxContainer/Sidebar/VBoxContainer/BottomContainer/Settings" to="." method="_on_Settings_item_activated"]
[connection signal="pressed" from="HBoxContainer/Body/Content/ImageViewer/ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="HBoxContainer/Body/Content/ImageViewer/ButtonRight" to="." method="_on_ButtonRight_pressed"]
